--- a/utils/generator/paths.ini
+++ b/utils/generator/paths.ini
@@ -1,11 +1,9 @@
-#sdl_javascript_suite/lib/js/util/
-PATH_TO_ENUM_CLASS = ../../util/Enum.js
+PATH_TO_STRUCT_CLASS = com.smartdevicelink.proxy.RPCStruct
+PATH_TO_REQUEST_CLASS = com.smartdevicelink.proxy.RPCRequest
+PATH_TO_RESPONSE_CLASS = com.smartdevicelink.proxy.RPCResponse
+PATH_TO_NOTIFICATION_CLASS = com.smartdevicelink.proxy.RPCNotification
 
-#sdl_javascript_suite/lib/js/rpc/
-PATH_TO_STRUCT_CLASS = ../RpcStruct.js
-PATH_TO_REQUEST_CLASS = ../RpcRequest.js
-PATH_TO_RESPONSE_CLASS = ../RpcResponse.js
-PATH_TO_NOTIFICATION_CLASS = ../RpcNotification.js
-ENUMS_DIR_NAME = ../enums
-STRUCTS_DIR_NAME = ../structs
-FUNCTIONS_DIR_NAME = ../messages
+ENUMS_DIR_NAME = enums
+STRUCTS_DIR_NAME = .
+FUNCTIONS_DIR_NAME = .
+OUTPUT_DIR_NAME = base/src/main/java/com/smartdevicelink/proxy/rpc
