--- a/utils/generator/paths.ini
+++ b/utils/generator/paths.ini
@@ -1,9 +1,8 @@
-PATH_TO_STRUCT_CLASS = com.smartdevicelink.proxy.RPCStruct
-PATH_TO_REQUEST_CLASS = com.smartdevicelink.proxy.RPCRequest
-PATH_TO_RESPONSE_CLASS = com.smartdevicelink.proxy.RPCResponse
-PATH_TO_NOTIFICATION_CLASS = com.smartdevicelink.proxy.RPCNotification
+ENUMS_PACKAGE = com.smartdevicelink.proxy.rpc.enums
+STRUCTS_PACKAGE = com.smartdevicelink.proxy.rpc
+FUNCTIONS_PACKAGE = com.smartdevicelink.proxy.rpc
 
-ENUMS_DIR_NAME = enums
-STRUCTS_DIR_NAME = .
-FUNCTIONS_DIR_NAME = .
-OUTPUT_DIR_NAME = base/src/main/java/com/smartdevicelink/proxy/rpc
+STRUCT_CLASS = com.smartdevicelink.proxy.RPCStruct
+REQUEST_CLASS = com.smartdevicelink.proxy.RPCRequest
+RESPONSE_CLASS = com.smartdevicelink.proxy.RPCResponse
+NOTIFICATION_CLASS = com.smartdevicelink.proxy.RPCNotification
