--- a/utils/generator/mapping.json
+++ b/utils/generator/mapping.json
@@ -179,6 +179,7 @@
       "kind": "simple"
     },
     "VrCapabilities": {
+      "script": "templates/scripts/VrCapabilities_valueForString.groovy",
       "kind": "simple",
       "params": {
         "Text": {
